--- a/packages/dw-react-controls/package.json
+++ b/packages/dw-react-controls/package.json
@@ -7,7 +7,9 @@
 	"author": "Nick Sevens",
 	"license": "MIT",
 	"scripts": {
-		"clean": "just-scripts clean"
+		"build": "just-scripts build",
+		"clean": "just-scripts clean",
+		"start": "just-scripts dev:storybook"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.11.6",
