--- a/packages/dw-react-controls/package.json
+++ b/packages/dw-react-controls/package.json
@@ -9,20 +9,28 @@
 	"scripts": {
 		"build": "just-scripts build",
 		"clean": "just-scripts clean",
-		"start": "just-scripts dev:storybook"
+		"start": "just-scripts dev:storybook",
+		"start-test": "just-scripts jest-watch",
+		"test": "just-scripts test"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.11.6",
+		"@babel/core": "^7.12.1",
+		"@babel/preset-env": "7.12.1",
+		"@babel/preset-react": "^7.12.1",
+		"@babel/preset-typescript": "^7.12.1",
 		"@dw-react-lib/tslint-rules": "^1.0.0",
 		"@storybook/addon-docs": "^6.0.22",
 		"@storybook/addons": "^6.0.22",
 		"@storybook/components": "^6.0.22",
 		"@storybook/core-events": "^6.0.22",
 		"@storybook/react": "^6.0.22",
+		"@testing-library/react": "^11.1.0",
+		"@types/jest": "^26.0.14",
 		"@types/node": "^14.11.8",
 		"@types/react": "^16.9.51",
 		"@types/react-dom": "^16.9.8",
 		"@types/webpack-env": "^1.15.3",
+		"babel-jest": "^26.5.2",
 		"babel-loader": "^8.1.0",
 		"node-sass": "^4.14.1",
 		"office-ui-fabric-react": "^6.214.1",
