--- a/scripts/package.json
+++ b/scripts/package.json
@@ -8,13 +8,17 @@
 		"@microsoft/load-themed-styles": "^1.10.108",
 		"@microsoft/loader-load-themed-styles": "^1.8.75",
 		"@storybook/react": "^6.0.22",
+		"@types/jest": "^26.0.14",
 		"@types/lerna-alias": "^3.0.0",
 		"@types/node": "^14.11.8",
 		"@types/webpack-env": "^1.15.3",
 		"autoprefixer": "^9.8.6",
+		"babel-jest": "^26.3.0",
 		"clean-css": "^4.2.3",
 		"css-loader": "^4.3.0",
 		"file-loader": "^6.1.0",
+		"jest": "^26.5.3",
+		"jest-watch-typeahead": "^0.6.1",
 		"hard-source-webpack-plugin-fixed-hashbug": "^0.13.2",
 		"ignore-not-found-export-webpack-plugin": "^1.0.1",
 		"just-scripts": "^1.1.0",
@@ -29,6 +33,7 @@
 		"riceburn": "^1.3.1",
 		"sass-loader": "^10.0.3",
 		"tslint": "^6.1.3",
+		"ts-jest": "^26.4.1",
 		"ts-loader": "^8.0.4",
 		"ts-node": "^9.0.0",
 		"typescript": "^3.9.7",
