--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
 	"name": "@dlw-digitalworkplace/dw-react-lib",
 	"private": true,
 	"scripts": {
-		"beachball:publish": "beachball publish",
 		"bump": "beachball bump",
 		"build": "lage build",
 		"change": "beachball change",
 		"checkchange": "beachball check",
 		"clean": "lage clean",
+		"release": "beachball publish",
 		"start": "node scripts/start.js",
 		"start-test": "lage start-test",
 		"test": "lage test --verbose"
