--- a/packages/dw-react-controls/.npmignore
+++ b/packages/dw-react-controls/.npmignore
@@ -1,8 +1,11 @@
 .storybook
 **/.stories.*
+config
 node_modules
 src/**/*
 temp
+babel.config.js
+jest.config.js
 just.config.ts
 tsconfig.json
 tsconfig.tsbuildinfo
