--- a/packages/dw-react-controls/package.json
+++ b/packages/dw-react-controls/package.json
@@ -6,6 +6,10 @@
 	"typings": "lib/index.d.ts",
 	"author": "Nick Sevens",
 	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/dlw-digitalworkplace/dw-react-lib"
+	},
 	"scripts": {
 		"build": "just-scripts build",
 		"clean": "just-scripts clean",
