--- a/packages/tslint-rules/package.json
+++ b/packages/tslint-rules/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@dw-react-lib/tslint-rules",
 	"version": "1.0.0",
+	"private": true,
 	"description": "Shared TSLint rules for React development.",
 	"main": "tslint.json",
 	"author": "Nick Sevens",
