--- a/packages/dw-react-controls/package.json
+++ b/packages/dw-react-controls/package.json
@@ -30,6 +30,7 @@
 		"@storybook/core-events": "^6.0.22",
 		"@storybook/react": "^6.0.22",
 		"@testing-library/react": "^11.1.0",
+		"@testing-library/user-event": "^13.1.9",
 		"@types/jest": "^26.0.14",
 		"@types/node": "^14.11.8",
 		"@types/react": "^16.9.51",
