--- a/packages/dw-react-utils/package.json
+++ b/packages/dw-react-utils/package.json
@@ -21,12 +21,9 @@
 		"@types/react": "^16.9.51",
 		"react": "^16.13.1",
 		"tslint": "^6.1.3",
-		"typescript": "^3.9.7",
-		"webpack": "^4.44.2"
+		"typescript": "^3.9.7"
 	},
 	"dependencies": {
-		"clsx": "^1.1.1",
-		"rfdc": "^1.3.0",
 		"ts-node": "^9.0.0"
 	},
 	"peerDependencies": {
