--- a/scripts/package.json
+++ b/scripts/package.json
@@ -9,6 +9,7 @@
 	"author": "Nick Sevens",
 	"license": "MIT",
 	"devDependencies": {
+		"@jest/reporters": "^26.5.3",
 		"@microsoft/load-themed-styles": "^1.10.108",
 		"@microsoft/loader-load-themed-styles": "^1.8.75",
 		"@storybook/react": "^6.0.22",
@@ -21,10 +22,10 @@
 		"clean-css": "^4.2.3",
 		"css-loader": "^4.3.0",
 		"file-loader": "^6.1.0",
-		"jest": "^26.5.3",
-		"jest-watch-typeahead": "^0.6.1",
 		"hard-source-webpack-plugin-fixed-hashbug": "^0.13.2",
 		"ignore-not-found-export-webpack-plugin": "^1.0.1",
+		"jest": "^26.5.3",
+		"jest-watch-typeahead": "^0.6.1",
 		"just-scripts": "^1.1.0",
 		"lerna-alias": "^3.0.2",
 		"node-sass": "^4.14.1",
@@ -36,10 +37,10 @@
 		"react-docgen-typescript-loader": "^3.7.2",
 		"riceburn": "^1.3.1",
 		"sass-loader": "^10.0.3",
-		"tslint": "^6.1.3",
 		"ts-jest": "^26.4.1",
 		"ts-loader": "^8.0.4",
 		"ts-node": "^9.0.0",
+		"tslint": "^6.1.3",
 		"typescript": "^3.9.7",
 		"webpack": "^4.44.2"
 	}
