--- a/packages/dw-react-controls/package.json
+++ b/packages/dw-react-controls/package.json
@@ -29,6 +29,7 @@
 		"@storybook/components": "^6.0.22",
 		"@storybook/core-events": "^6.0.22",
 		"@storybook/react": "^6.0.22",
+		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^13.1.9",
 		"@types/jest": "^26.0.14",
