Package and build system refactoring

--- a/apps/demo-spfx-app/package.json
+++ b/apps/demo-spfx-app/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@dw-react-apps/demo-spfx-app",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"private": true,
 	"main": "lib/index.js",
 	"scripts": {
@@ -10,8 +10,9 @@
 		"test": "gulp test"
 	},
 	"dependencies": {
-		"@dlw-digitalworkplace/dw-react-controls": "^0.2.0",
-		"@dlw-digitalworkplace/taxonomyprovider-sharepoint": "^0.0.0",
+		"@dlw-digitalworkplace/dw-react-controls": "0.0.0",
+		"@dlw-digitalworkplace/taxonomyprovider-sharepoint": "0.0.0",
+		"@dw-react-lib/tslint-rules": "^1.0.0",
 		"@microsoft/sp-core-library": "1.12.1",
 		"@microsoft/sp-lodash-subset": "1.12.1",
 		"@microsoft/sp-office-ui-fabric-core": "1.12.1",
