--- a/packages/dw-react-controls/tsconfig.json
+++ b/packages/dw-react-controls/tsconfig.json
@@ -5,8 +5,8 @@
 		"lib": ["es5", "dom", "es2015.promise"],
 		"outDir": "lib",
 		"rootDir": "./src",
-		"typeRoots": ["../../node_modules/@types", "../../typings"],
-		"types": ["jest", "node", "webpack-env", "custom-global"]
+		"typeRoots": ["./node_modules", "./node_modules/@types", "../../node_modules/@types", "../../typings"],
+		"types": ["jest", "node", "custom-global"]
 	},
 	"include": ["src"]
 }
