--- a/package.json
+++ b/package.json
@@ -2,21 +2,34 @@
 	"name": "@dlw-digitalworkplace/dw-react-lib",
 	"private": true,
 	"scripts": {
-		"bump": "beachball bump",
 		"build": "lage build",
 		"change": "beachball change",
 		"checkchange": "beachball check",
 		"clean": "lage clean",
+		"storybook": "start-storybook -p 6006",
+		"build-storybook": "build-storybook",
 		"release": "beachball publish",
+		"release:canary": "beachball canary",
 		"start": "node scripts/start.js",
 		"start-test": "lage start-test",
 		"test": "lage test --verbose"
 	},
+	"dependencies": {},
 	"devDependencies": {
-		"beachball": "^1.37.0",
-		"lage": "^0.19.8",
-		"lint-staged": "^10.4.0",
-		"typescript": "^4.0.3"
+		"@babel/core": "^7.14.6",
+		"@storybook/addon-actions": "^6.3.4",
+		"@storybook/addon-essentials": "^6.3.4",
+		"@storybook/addon-links": "^6.3.4",
+		"@storybook/addon-storysource": "^6.3.4",
+		"@storybook/react": "^6.3.4",
+		"babel-loader": "^8.2.2",
+		"beachball": "^2.6.2",
+		"lage": "^0.30.0",
+		"lint-staged": "^11.0.0",
+		"office-ui-fabric-react": "^6.214.1",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"typescript": "^4.3.5"
 	},
 	"lint-staged": {
 		"*.{ts,tsx,js,jsx,json,css,scss,html,htm,md,yml}": [
