--- a/packages/dw-react-utils/package.json
+++ b/packages/dw-react-utils/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@dlw-digitalworkplace/dw-react-utils",
-	"version": "0.1.0",
+	"version": "0.0.0",
 	"main": "lib-commonjs/index.js",
 	"module": "lib/index.js",
 	"typings": "lib/index.d.ts",
@@ -13,20 +13,22 @@
 	"scripts": {
 		"build": "just-scripts build",
 		"clean": "just-scripts clean",
+		"start-test": "just-scripts jest-watch",
 		"test": "just-scripts test"
 	},
 	"devDependencies": {
 		"@dw-react-lib/build": "^1.0.0",
 		"@dw-react-lib/tslint-rules": "^1.0.0",
-		"@testing-library/react-hooks": "^7.0.0",
-		"@types/node": "^14.11.8",
+		"@testing-library/react-hooks": "^7.0.1",
+		"@types/jest": "^26.0.14",
+		"@types/node": "^16.0.1",
 		"@types/react": "^16.9.51",
 		"react": "^16.13.1",
 		"tslint": "^6.1.3",
 		"typescript": "^3.9.7"
 	},
 	"dependencies": {
-		"ts-node": "^9.0.0"
+		"ts-node": "^10.0.0"
 	},
 	"peerDependencies": {
 		"react": ">=16.8.0 <17.0.0"
