--- a/packages/dw-refresh-cache/package.json
+++ b/packages/dw-refresh-cache/package.json
@@ -13,11 +13,13 @@
 	"scripts": {
 		"build": "just-scripts build",
 		"clean": "just-scripts clean",
+		"start-test": "just-scripts jest-watch",
 		"test": "just-scripts test"
 	},
 	"devDependencies": {
 		"@dw-react-lib/build": "^1.0.0",
 		"@dw-react-lib/tslint-rules": "^1.0.0",
+		"@types/jest": "^26.0.14",
 		"@types/node": "^14.11.8",
 		"tslint": "^6.1.3",
 		"typescript": "^3.9.7"
