--- a/scripts/package.json
+++ b/scripts/package.json
@@ -9,39 +9,17 @@
 	"author": "Nick Sevens",
 	"license": "MIT",
 	"devDependencies": {
-		"@jest/reporters": "^26.5.3",
-		"@microsoft/load-themed-styles": "^1.10.108",
-		"@microsoft/loader-load-themed-styles": "^1.8.75",
-		"@storybook/react": "^6.0.22",
-		"@types/jest": "^26.0.14",
-		"@types/lerna-alias": "^3.0.0",
-		"@types/node": "^14.11.8",
-		"@types/webpack-env": "^1.15.3",
-		"autoprefixer": "^9.8.6",
-		"babel-jest": "^26.3.0",
-		"clean-css": "^4.2.3",
-		"css-loader": "^4.3.0",
-		"file-loader": "^6.1.0",
-		"hard-source-webpack-plugin-fixed-hashbug": "^0.13.2",
-		"ignore-not-found-export-webpack-plugin": "^1.0.1",
-		"jest": "^26.5.3",
-		"jest-watch-typeahead": "^0.6.1",
+		"@jest/reporters": "^27.0.6",
+		"@types/node": "^16.0.1",
+		"jest": "^27.0.6",
+		"jest-watch-typeahead": "^0.6.4",
+		"jju": "^1.4.0",
 		"just-scripts": "^1.1.0",
 		"lerna-alias": "^3.0.2",
-		"node-sass": "^4.14.1",
-		"postcss": "^8.1.1",
-		"postcss-loader": "^4.0.3",
-		"postcss-modules": "^3.2.2",
-		"prettier": "^2.1.2",
-		"raw-loader": "^4.0.1",
-		"react-docgen-typescript-loader": "^3.7.2",
+		"prompts": "^2.4.1",
 		"riceburn": "^1.3.1",
-		"sass-loader": "^10.0.3",
-		"ts-jest": "^26.4.1",
-		"ts-loader": "^8.0.4",
-		"ts-node": "^9.0.0",
+		"ts-jest": "^27.0.3",
 		"tslint": "^6.1.3",
-		"typescript": "^3.9.7",
-		"webpack": "^4.44.2"
+		"typescript": "^4.3.5"
 	}
 }
