--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,14 +1,17 @@
 {
+	"extends": "../config/tsconfig.base.json",
+	// This config is used for running build scripts through ts-node
 	"compilerOptions": {
-		"allowJs": true,
-		"esModuleInterop": true,
-		"lib": ["ES2018", "DOM"],
 		"module": "CommonJS",
+		"target": "ES2018", // Node 10 per https://kangax.github.io/compat-table/es2016plus/#node10_9
+		"lib": ["ES2018", "DOM"], // Node 10, occasional test-related stuff that uses DOM
+		"esModuleInterop": true,
+		"allowJs": true,
 		"noImplicitAny": false,
 		"strictNullChecks": false,
-		"target": "ES2018",
 		"typeRoots": ["../typings", "../node_modules/@types"],
-		"types": ["node", "webpack-env"]
+		"types": ["node"]
 	},
-	"extends": "./typescript/tsconfig.common.json"
+	"include": ["."],
+	"exclude": ["./create-package/plop-templates*"]
 }
