--- a/packages/dw-react-utils/package.json
+++ b/packages/dw-react-utils/package.json
@@ -24,6 +24,7 @@
 		"@types/node": "^16.0.1",
 		"@types/react": "^16.9.51",
 		"react": "^16.13.1",
+		"tslib": "^2.3.0",
 		"tslint": "^6.1.3",
 		"typescript": "^3.9.7"
 	},
