--- a/apps/demo-spfx-app/config/config.json
+++ b/apps/demo-spfx-app/config/config.json
@@ -9,10 +9,20 @@
 					"manifest": "./src/webparts/demoTaxonomyPicker/DemoTaxonomyPickerWebPart.manifest.json"
 				}
 			]
+		},
+		"demo-spfx-components-web-part": {
+			"components": [
+				{
+					"entrypoint": "./lib/webparts/demoSPFxComponents/DemoSPFxComponentsWebPart.js",
+					"manifest": "./src/webparts/demoSPFxComponents/DemoSPFxComponentsWebPart.manifest.json"
+				}
+			]
 		}
 	},
 	"externals": {},
 	"localizedResources": {
-		"DemoTaxonomyPickerWebPartStrings": "lib/webparts/demoTaxonomyPicker/loc/{locale}.js"
+		"DemoTaxonomyPickerWebPartStrings": "lib/webparts/demoTaxonomyPicker/loc/{locale}.js",
+		"DemoSPFxComponentsWebPartStrings": "lib/webparts/demoSPFxComponents/loc/{locale}.js",
+		"DWControlStrings": "../../node_modules/@dlw-digitalworkplace/dw-spfx-controls/lib/loc/{locale}.js"
 	}
 }
