--- a/apps/demo-spfx-app/src/webparts/demoSPFxComponents/DemoSPFxComponentsWebPart.manifest.json
+++ b/apps/demo-spfx-app/src/webparts/demoSPFxComponents/DemoSPFxComponentsWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-	"id": "af4942ae-89c0-4a9b-b0c5-865833c89adb",
-	"alias": "DemoTaxonomyPickerWebPart",
+	"id": "ebe6b24a-979e-40ce-b01d-e5080f5bee39",
+	"alias": "DemoSPFxComponentsWebPart",
 	"componentType": "WebPart",
 
 	// The "*" signifies that the version should be taken from the package.json
@@ -19,10 +19,12 @@
 		{
 			"groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
 			"group": { "default": "Other" },
-			"title": { "default": "TaxonomyPicker Demo" },
-			"description": { "default": "Demo webpart showing the TaxonomyPicker and SharePoint Taxonomy provider." },
+			"title": { "default": "SPFx Components Demo" },
+			"description": { "default": "Demo webpart showing the SPFx components." },
 			"officeFabricIconFontName": "Page",
-			"properties": {}
+			"properties": {
+				"description": "DemoTaxonomyPicker"
+			}
 		}
 	]
 }
