--- a/packages/dw-spfx-controls/package.json
+++ b/packages/dw-spfx-controls/package.json
@@ -6,7 +6,9 @@
 	"license": "UNLICENSED",
 	"scripts": {
 		"build": "gulp build",
-		"clean": "gulp clean"
+		"clean": "gulp clean",
+		"start-test": "just-scripts jest-watch",
+		"test": "just-scripts test"
 	},
 	"dependencies": {
 		"@microsoft/sp-core-library": "1.12.1",
@@ -14,9 +16,13 @@
 		"@microsoft/sp-office-ui-fabric-core": "1.12.1",
 		"@microsoft/sp-property-pane": "1.12.1",
 		"@microsoft/sp-webpart-base": "1.12.1",
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^12.0.0",
+		"@testing-library/user-event": "^13.1.9",
+		"@types/jest": "^26.0.24",
 		"office-ui-fabric-react": "7.156.0",
-		"react-dom": "16.9.0",
 		"react": "16.9.0",
+		"react-dom": "16.9.0",
 		"react-textarea-autosize": "^8.3.3"
 	},
 	"devDependencies": {
@@ -27,10 +33,11 @@
 		"@microsoft/sp-module-interfaces": "1.12.1",
 		"@microsoft/sp-tslint-rules": "1.12.1",
 		"@microsoft/sp-webpart-workbench": "1.12.1",
-		"@types/react-dom": "16.9.8",
 		"@types/react": "16.9.36",
+		"@types/react-dom": "16.9.8",
 		"@types/webpack-env": "1.13.1",
 		"ajv": "~5.2.2",
-		"gulp": "~4.0.2"
+		"gulp": "~4.0.2",
+		"identity-obj-proxy": "^3.0.0"
 	}
 }
