--- a/packages/dw-spfx-controls/tsconfig.json
+++ b/packages/dw-spfx-controls/tsconfig.json
@@ -17,7 +17,7 @@
 		"strictNullChecks": false,
 		"target": "es5",
 		"typeRoots": ["../../node_modules/@types", "../../node_modules/@microsoft"],
-		"types": ["webpack-env"]
+		"types": ["jest", "webpack-env"]
 	},
 	"include": ["src/**/*.ts", "src/**/*.tsx"]
 }
