--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@storybook/addon-links": "^6.3.4",
 		"@storybook/addon-storysource": "^6.3.4",
 		"@storybook/react": "^6.3.4",
+		"@uifabric/icons": "^6.5.5",
 		"babel-loader": "^8.2.2",
 		"beachball": "^2.6.3",
 		"lage": "^0.30.0",
