Add more info link to webpart title

--- a/apps/demo-spfx-app/src/webparts/demoSPFxComponents/DemoSPFxComponentsWebPart.manifest.json
+++ b/apps/demo-spfx-app/src/webparts/demoSPFxComponents/DemoSPFxComponentsWebPart.manifest.json
@@ -23,7 +23,7 @@
 			"description": { "default": "Demo webpart showing the SPFx components." },
 			"officeFabricIconFontName": "Page",
 			"properties": {
-				"description": "DemoTaxonomyPicker"
+				"showMoreInfoLink": true
 			}
 		}
 	]
