--- a/packages/dw-react-utils/package.json
+++ b/packages/dw-react-utils/package.json
@@ -24,12 +24,10 @@
 		"@types/node": "^16.0.1",
 		"@types/react": "^16.9.51",
 		"react": "^16.13.1",
+		"ts-node": "^9.0.0",
 		"tslib": "^2.3.0",
 		"tslint": "^6.1.3",
 		"typescript": "^3.9.7"
-	},
-	"dependencies": {
-		"ts-node": "^10.0.0"
 	},
 	"peerDependencies": {
 		"react": ">=16.8.0 <17.0.0"
