--- a/packages/dw-refresh-cache/package.json
+++ b/packages/dw-refresh-cache/package.json
@@ -21,11 +21,9 @@
 		"@dw-component-lib/tslint-rules": "^1.0.0",
 		"@types/jest": "^26.0.14",
 		"@types/node": "^14.11.8",
+		"ts-node": "^9.0.0",
 		"tslib": "^2.3.0",
 		"tslint": "^6.1.3",
 		"typescript": "^3.9.7"
-	},
-	"dependencies": {
-		"ts-node": "^9.0.0"
 	}
 }
