--- a/apps/demo-spfx-app/src/webparts/demoPeoplePicker/DemoPeoplePickerWebPart.manifest.json
+++ b/apps/demo-spfx-app/src/webparts/demoPeoplePicker/DemoPeoplePickerWebPart.manifest.json
@@ -22,7 +22,9 @@
 			"title": { "default": "PeoplePicker Demo" },
 			"description": { "default": "Demo webpart showing the PeoplePicker and PeoplePicker providers." },
 			"officeFabricIconFontName": "Page",
-			"properties": {}
+			"properties": {
+				"providerType": "MockProvider"
+			}
 		}
 	]
 }
