rewrite peoplepicker control so picker props can be accessed by implementing control

--- a/apps/demo-spfx-app/src/webparts/demoPeoplePicker/DemoPeoplePickerWebPart.manifest.json
+++ b/apps/demo-spfx-app/src/webparts/demoPeoplePicker/DemoPeoplePickerWebPart.manifest.json
@@ -23,7 +23,8 @@
 			"description": { "default": "Demo webpart showing the PeoplePicker and PeoplePicker providers." },
 			"officeFabricIconFontName": "Page",
 			"properties": {
-				"providerType": "MockProvider"
+				"providerType": "MockProvider",
+				"itemLimit": 3
 			}
 		}
 	]
