--- a/packages/peoplePickerProviders/sharepoint/package.json
+++ b/packages/peoplePickerProviders/sharepoint/package.json
@@ -33,6 +33,7 @@
 	},
 	"dependencies": {
 		"@dlw-digitalworkplace/dw-react-utils": "^0.2.0",
+		"@dlw-digitalworkplace/peoplepickerprovider-graph": "^0.1.0",
 		"deepmerge": "^4.2.2",
 		"rfdc": "^1.3.0"
 	},
