--- a/apps/demo-spfx-app/tsconfig.json
+++ b/apps/demo-spfx-app/tsconfig.json
@@ -1,22 +1,24 @@
 {
-	"extends": "../../node_modules/@microsoft/rush-stack-compiler-3.7/includes/tsconfig-web.json",
+	"extends": "../../node_modules/@microsoft/rush-stack-compiler-4.5/includes/tsconfig-web.json",
 	"compilerOptions": {
-		"target": "es5",
+		"declaration": true,
+		"experimentalDecorators": true,
 		"forceConsistentCasingInFileNames": true,
+		"inlineSources": false,
+		"jsx": "react",
+		"lib": ["es5", "dom", "es2015.collection", "es2015.promise"],
 		"module": "esnext",
 		"moduleResolution": "node",
-		"jsx": "react",
-		"declaration": true,
-		"sourceMap": true,
-		"experimentalDecorators": true,
-		"skipLibCheck": true,
-		"outDir": "lib",
-		"inlineSources": false,
-		"strictNullChecks": false,
 		"noUnusedLocals": false,
+		"outDir": "lib",
+		"declarationDir": "./lib",
+		"rootDir": "./src",
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strictNullChecks": false,
+		"target": "es5",
 		"typeRoots": ["./node_modules/@types", "./node_modules/@microsoft"],
-		"types": ["node", "webpack-env"],
-		"lib": ["es5", "dom", "es2015.collection", "es2015.promise"]
+		"types": ["node", "webpack-env"]
 	},
 	"include": ["src/**/*.ts", "src/**/*.tsx"]
 }
