--- a/package.json
+++ b/package.json
@@ -17,19 +17,18 @@
 	"dependencies": {},
 	"devDependencies": {
 		"@babel/core": "^7.14.6",
+		"@fluentui/react": "8.104.0",
 		"@storybook/addon-actions": "^6.3.4",
 		"@storybook/addon-essentials": "^6.3.4",
 		"@storybook/addon-links": "^6.3.4",
 		"@storybook/addon-storysource": "^6.3.4",
 		"@storybook/react": "^6.3.4",
-		"@uifabric/icons": "^6.5.5",
 		"babel-loader": "^8.2.2",
 		"beachball": "^2.6.3",
 		"lage": "^0.30.0",
 		"lint-staged": "^11.0.0",
-		"office-ui-fabric-react": "^6.214.1",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
 		"typescript": "^4.3.5"
 	},
 	"lint-staged": {
@@ -44,10 +43,10 @@
 			"packages/peoplePickerProviders/*",
 			"packages/taxonomyProviders/*",
 			"scripts"
-		],
-		"nohoist": [
-			"**/@uifabric/**",
-			"**/office-ui-fabric-react"
 		]
+	},
+	"volta": {
+		"node": "16.19.0",
+		"yarn": "1.22.19"
 	}
 }
