--- a/typings/custom-global/package.json
+++ b/typings/custom-global/package.json
@@ -7,5 +7,8 @@
 	"types": "index.d.ts",
 	"dependencies": {
 		"@types/webpack-env": "^1.15.1"
+	},
+	"volta": {
+		"extends": "../../package.json"
 	}
 }
