--- a/apps/demo-spfx-app/package.json
+++ b/apps/demo-spfx-app/package.json
@@ -21,8 +21,8 @@
 		"@microsoft/sp-office-ui-fabric-core": "1.16.1",
 		"@microsoft/sp-property-pane": "1.16.1",
 		"@microsoft/sp-webpart-base": "1.16.1",
-		"react-dom": "16.13.1",
-		"react": "16.13.1"
+		"react-dom": "17.0.1",
+		"react": "17.0.1"
 	},
 	"devDependencies": {
 		"@microsoft/rush-stack-compiler-4.5": "0.3.0",
@@ -30,8 +30,8 @@
 		"@microsoft/sp-module-interfaces": "1.16.1",
 		"@microsoft/sp-tslint-rules": "1.16.1",
 		"@types/node": "^14.11.8",
-		"@types/react-dom": "16.9.8",
-		"@types/react": "16.9.51",
+		"@types/react-dom": "^17.0.1",
+		"@types/react": "^17.0.1",
 		"@types/webpack-env": "1.13.1",
 		"ajv": "^6.12.5",
 		"gulp": "4.0.2",
