--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"@babel/core": "^7.14.6",
+		"@babel/core": "7.18.9",
 		"@fluentui/react": "8.104.0",
 		"@storybook/addon-actions": "^6.3.4",
 		"@storybook/addon-essentials": "^6.3.4",
@@ -27,8 +27,8 @@
 		"beachball": "^2.6.3",
 		"lage": "^0.30.0",
 		"lint-staged": "^11.0.0",
-		"react": "16.13.1",
-		"react-dom": "16.13.1",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
 		"typescript": "^4.3.5"
 	},
 	"lint-staged": {
