--- a/packages/dw-spfx-controls/package.json
+++ b/packages/dw-spfx-controls/package.json
@@ -31,18 +31,18 @@
 		"@microsoft/sp-property-pane": "1.16.1",
 		"@microsoft/sp-tslint-rules": "1.16.1",
 		"@microsoft/sp-webpart-base": "1.16.1",
-		"@testing-library/jest-dom": "^5.14.1",
-		"@testing-library/react": "^12.0.0",
-		"@testing-library/user-event": "^13.1.9",
+		"@testing-library/jest-dom": "5.16.5",
+		"@testing-library/react": "12.1.5",
+		"@testing-library/user-event": "12.8.3",
 		"@types/jest": "^26.0.24",
-		"@types/react-dom": "16.9.8",
-		"@types/react": "16.9.51",
+		"@types/react": "^17.0.1",
+		"@types/react-dom": "^17.0.1",
 		"@types/webpack-env": "1.13.1",
 		"ajv": "^6.12.5",
 		"gulp": "4.0.2",
 		"identity-obj-proxy": "^3.0.0",
-		"react": "16.13.1",
-		"react-dom": "16.13.1",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
 		"ts-node": "^9.0.0"
 	},
 	"peerDependencies": {
@@ -52,8 +52,8 @@
 		"@microsoft/sp-office-ui-fabric-core": ">=1.16.1 <2.0.0",
 		"@microsoft/sp-property-pane": ">=1.16.1 <2.0.0",
 		"@microsoft/sp-webpart-base": ">=1.16.1 <2.0.0",
-		"react": ">=16.13.1",
-		"react-dom": ">=16.13.1"
+		"react": "17.0.1",
+		"react-dom": "17.0.1"
 	},
 	"volta": {
 		"extends": "../../package.json"
