--- a/packages/dw-spfx-controls/package.json
+++ b/packages/dw-spfx-controls/package.json
@@ -20,17 +20,15 @@
 	},
 	"devDependencies": {
 		"@dw-component-lib/build": "^1.0.0",
-		"@dw-component-lib/tslint-rules": "^1.0.0",
 		"@fluentui/react": "8.104.0",
-		"@microsoft/rush-stack-compiler-3.9": "0.4.47",
-		"@microsoft/sp-build-web": "1.16.1",
-		"@microsoft/sp-core-library": "1.16.1",
-		"@microsoft/sp-lodash-subset": "1.16.1",
-		"@microsoft/sp-module-interfaces": "1.16.1",
-		"@microsoft/sp-office-ui-fabric-core": "1.16.1",
-		"@microsoft/sp-property-pane": "1.16.1",
-		"@microsoft/sp-tslint-rules": "1.16.1",
-		"@microsoft/sp-webpart-base": "1.16.1",
+		"@microsoft/rush-stack-compiler-4.5": "0.3.0",
+		"@microsoft/sp-build-web": "1.16.0",
+		"@microsoft/sp-core-library": "1.16.0",
+		"@microsoft/sp-lodash-subset": "1.16.0",
+		"@microsoft/sp-module-interfaces": "1.16.0",
+		"@microsoft/sp-office-ui-fabric-core": "1.16.0",
+		"@microsoft/sp-property-pane": "1.16.0",
+		"@microsoft/sp-webpart-base": "1.16.0",
 		"@testing-library/jest-dom": "5.16.5",
 		"@testing-library/react": "12.1.5",
 		"@testing-library/user-event": "12.8.3",
@@ -47,13 +45,13 @@
 	},
 	"peerDependencies": {
 		"@fluentui/react": ">=8.104.0 <9.0.0",
-		"@microsoft/sp-core-library": ">=1.16.1 <2.0.0",
-		"@microsoft/sp-lodash-subset": ">=1.16.1 <2.0.0",
-		"@microsoft/sp-office-ui-fabric-core": ">=1.16.1 <2.0.0",
-		"@microsoft/sp-property-pane": ">=1.16.1 <2.0.0",
-		"@microsoft/sp-webpart-base": ">=1.16.1 <2.0.0",
-		"react": "17.0.1",
-		"react-dom": "17.0.1"
+		"@microsoft/sp-core-library": ">=1.16.0 <2.0.0",
+		"@microsoft/sp-lodash-subset": ">=1.16.0 <2.0.0",
+		"@microsoft/sp-office-ui-fabric-core": ">=1.16.0 <2.0.0",
+		"@microsoft/sp-property-pane": ">=1.16.0 <2.0.0",
+		"@microsoft/sp-webpart-base": ">=1.16.0 <2.0.0",
+		"react": ">=17.0.0 <18.0.0",
+		"react-dom": ">=17.0.0 <18.0.0"
 	},
 	"volta": {
 		"extends": "../../package.json"
