--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
 		"beachball": "^2.6.3",
 		"lage": "^0.30.0",
 		"lint-staged": "^11.0.0",
-		"react": "17.0.1",
-		"react-dom": "17.0.1",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
 		"typescript": "^4.3.5"
 	},
 	"lint-staged": {
 		"*.{ts,tsx,js,jsx,json,css,scss,html,htm,md,yml}": [
 			"prettier --write"
 		]
+	},
+	"resolutions": {
+		"**/react": "16.13.1",
+		"**/react-dom": "16.13.1"
 	},
 	"workspaces": {
 		"packages": [
