--- a/packages/peoplePickerProviders/sharepoint/package.json
+++ b/packages/peoplePickerProviders/sharepoint/package.json
@@ -37,8 +37,7 @@
 		"rfdc": "^1.3.0"
 	},
 	"peerDependencies": {
-		"@dlw-digitalworkplace/dw-react-controls": "^0.5.1",
-		"@microsoft/sp-http": ">=1.16.0"
+		"@microsoft/sp-http": ">=1.16.0 <2.0.0"
 	},
 	"volta": {
 		"extends": "../../../package.json"
