--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn
-      - run: yarn build
+      - run: yarn build --verbose
       - run: yarn test
       - run: |
           git config --global user.email "nick.sevens@delaware.pro"
