--- a/apps/demo-spfx-app/package.json
+++ b/apps/demo-spfx-app/package.json
@@ -9,28 +9,28 @@
     "start": "gulp serve"
   },
   "dependencies": {
-    "@dlw-digitalworkplace/dw-react-controls": "1.1.3",
+    "@dlw-digitalworkplace/dw-react-controls": "1.1.4",
     "@dlw-digitalworkplace/dw-spfx-controls": "2.0.2",
     "@dlw-digitalworkplace/peoplepickerprovider-graph": "0.2.8",
-    "@dlw-digitalworkplace/peoplepickerprovider-sharepoint": "0.2.4",
+    "@dlw-digitalworkplace/peoplepickerprovider-sharepoint": "0.2.5",
     "@dlw-digitalworkplace/taxonomyprovider-sharepoint": "0.1.14",
     "@fluentui/react": "8.104.0",
-    "@microsoft/sp-core-library": "1.16.0",
-    "@microsoft/sp-lodash-subset": "1.16.0",
-    "@microsoft/sp-office-ui-fabric-core": "1.16.0",
-    "@microsoft/sp-property-pane": "1.16.0",
-    "@microsoft/sp-webpart-base": "1.16.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "@microsoft/sp-core-library": "1.16.1",
+    "@microsoft/sp-lodash-subset": "1.16.1",
+    "@microsoft/sp-office-ui-fabric-core": "1.16.1",
+    "@microsoft/sp-property-pane": "1.16.1",
+    "@microsoft/sp-webpart-base": "1.16.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@microsoft/rush-stack-compiler-4.5": "0.3.0",
-    "@microsoft/sp-build-web": "1.16.0",
-    "@microsoft/sp-module-interfaces": "1.16.0",
+    "@microsoft/sp-build-web": "1.16.1",
+    "@microsoft/sp-module-interfaces": "1.16.1",
     "@types/node": "^14.11.8",
-    "@types/react": "^16.14.34",
-    "@types/react-dom": "^16.9.17",
-    "@types/webpack-env": "1.13.1",
+    "@types/react": "17.0.45",
+    "@types/react-dom": "17.0.17",
+    "@types/webpack-env": "1.15.2",
     "ajv": "^6.12.5",
     "gulp": "4.0.2",
     "tslib": "2.4.1"
