--- a/packages/dw-react-controls/package.json
+++ b/packages/dw-react-controls/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dlw-digitalworkplace/dw-react-controls",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "main": "lib-commonjs/index.js",
   "module": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -24,10 +24,10 @@
     "@testing-library/user-event": "12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^14.11.8",
-    "@types/react": "^16.14.34",
-    "@types/react-dom": "^16.9.17",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "@types/react": "17.0.45",
+    "@types/react-dom": "17.0.17",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "ts-node": "^9.0.0",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5"
