--- a/packages/dw-spfx-controls/package.json
+++ b/packages/dw-spfx-controls/package.json
@@ -22,25 +22,25 @@
     "@dw-component-lib/build": "^1.0.0",
     "@fluentui/react": "8.104.0",
     "@microsoft/rush-stack-compiler-4.5": "0.3.0",
-    "@microsoft/sp-build-web": "1.16.0",
-    "@microsoft/sp-core-library": "1.16.0",
-    "@microsoft/sp-lodash-subset": "1.16.0",
-    "@microsoft/sp-module-interfaces": "1.16.0",
-    "@microsoft/sp-office-ui-fabric-core": "1.16.0",
-    "@microsoft/sp-property-pane": "1.16.0",
-    "@microsoft/sp-webpart-base": "1.16.0",
+    "@microsoft/sp-build-web": "1.16.1",
+    "@microsoft/sp-core-library": "1.16.1",
+    "@microsoft/sp-lodash-subset": "1.16.1",
+    "@microsoft/sp-module-interfaces": "1.16.1",
+    "@microsoft/sp-office-ui-fabric-core": "1.16.1",
+    "@microsoft/sp-property-pane": "1.16.1",
+    "@microsoft/sp-webpart-base": "1.16.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "12.8.3",
     "@types/jest": "^26.0.24",
-    "@types/react": "^16.14.34",
-    "@types/react-dom": "^16.9.17",
+    "@types/react": "17.0.45",
+    "@types/react-dom": "17.0.17",
     "@types/webpack-env": "1.13.1",
     "ajv": "^6.12.5",
     "gulp": "4.0.2",
     "identity-obj-proxy": "^3.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "ts-node": "^9.0.0"
   },
   "peerDependencies": {
