--- a/apps/demo-spfx-app/src/webparts/demoPeoplePicker/DemoPeoplePickerWebPart.manifest.json
+++ b/apps/demo-spfx-app/src/webparts/demoPeoplePicker/DemoPeoplePickerWebPart.manifest.json
@@ -25,7 +25,7 @@
 			"properties": {
 				"providerType": "MockProvider",
 				"itemLimit": 3,
-				"useMeEndpoint": false
+				"usersEndpoint": "users"
 			}
 		}
 	]
